# gtfs_to_geo

./: README.md  __init__.py  isochrone.html  loader.py  pyproject.toml
data/sample_gtfs/: routes.txt  stops.txt  trips.txt
gtfs_to_geo/: exceptions.py  loader.py
src/gtfs_to_geo/: filters.py  time_utils.py
src/gtfs_to_geo/analysis/: building_isochrones.py
src/gtfs_to_geo/geometry/: shapes.py  stop_points.py
src/gtfs_to_geo/loader/: loader.py
src/gtfs_to_geo/network/: edges.py  indexing.py  routing.py
src/gtfs_to_geo/visualization/: folium_maps.py
tests/: test_loader.py  test_network.py  test_visualization.py
